--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "pdfjs-dist": "^5.3.93",
     "react": "19.1.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
+    "react-pdf": "^10.1.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
