--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-pdf": "^10.1.0",
+    "react-spinners": "^0.17.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
